[package]
name = "rust-pubsub-lib"
version = "7.0.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
rdkafka = { version = "0.39.0", features = ["cmake-build", "gssapi", "tracing"], optional = true }
redis = { version = "1.1.0", default-features = false, features = ["acl", "connection-manager", "streams", "tokio-comp"], optional = true }
rust-env-var-lib = { git = "https://github.com/fermi-ad/rust-env-var-lib.git", tag = "v1.2.0" }
serde = { version = "1.0.228", optional = true }
serde_json = { version = "1.0.149", optional = true }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
uuid = { version = "1.23.0", features = ["v4"], optional = true }

[dev-dependencies]
rdkafka = { version = "0.39.0", features = ["cmake-build", "gssapi", "tracing"] }
redis = { version = "1.1.0", default-features = false, features = ["acl", "connection-manager", "streams", "tokio-comp"] }
serde = "1.0.228"
serde_json = "1.0.149"
uuid = { version = "1.23.0", features = ["v4"] }

[features]
default = []
kafka = ["dep:rdkafka", "dep:uuid"]
redis-pubsub = ["dep:redis"]
redis-stream = ["dep:redis", "dep:serde", "dep:serde_json"]
testing-utils = []
