[package]
name = "rust-pubsub-lib"
version = "9.0.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.39", features = ["cmake-build", "gssapi", "tracing"], optional = true }
redis = { version = "1", default-features = false, features = ["acl", "connection-manager", "streams", "tokio-comp"], optional = true }
rust-env-var-lib = { git = "https://github.com/fermi-ad/rust-env-var-lib.git", tag = "v1.2.0" }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"], optional = true }

[dev-dependencies]
rdkafka = { version = "0.39", features = ["cmake-build", "gssapi", "tracing"] }
redis = { version = "1", default-features = false, features = ["acl", "connection-manager", "streams", "tokio-comp"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[features]
default = []
kafka = ["dep:rdkafka", "dep:uuid"]
redis-pubsub = ["dep:redis", "dep:serde_json"]
redis-stream = ["dep:redis", "dep:serde_json"]
testing-utils = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
